src/assets/css/pages/_index.scss
@import '../abstracts/variables.scss';
@import '../components/buttons.scss';
@import '../components/page_header.scss';

.page-header {
  background: url('../../images/hero_images/index-hero.jpg');
  background-position: center;
  background-size: cover;
}

em {
  font-weight: 700;
}

// header specific css
.header-h1 {
  padding-bottom: 0.2em;
}

#cb-logo {
 font-size: 3em;
 font-weight: normal;
 margin-bottom: 0;
}

#header-cb-p {
  font-size: 0.75em;
}

.separator {
  font-size: smaller;
}

// comapny summary css
#company-summary-section {
  display: flex;
  flex-direction: column;
  justify-content: center;

  @media screen and (min-width: $screen-lg-min) {
    flex-direction: row;

    .section-content {
      max-width: 40%;
      margin: 0;
    }

    .section-content:first-child {
      margin-right: 1em;
    }

    .section-content:last-child {
      margin-left: 1em;
    }
  }
}

.index-contact-wrap {
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  @media screen and (min-width: $screen-lg-min) {
    flex-direction: row;
  }
}

.index-team-image {
  height: 160px;
  width: 269px;
}

.index-contact-text {
  margin: 0;
}

.index-contact-heading {
  margin: 0;
  font-family: $genh2fontfamily;
  text-transform: uppercase;
}

.index-contact-btn-container {
  display: flex;
  flex-direction: column;
  max-width: 140px;
  margin: 0.5em 0;

  .btn-contact-index:first-child {
    margin-bottom: 0.5em;
  }
}

$btn-shadow: 0px 5px 7px -3.5px #151515;
.btn-contact-index {
  -moz-box-shadow: $btn-shadow;
  -webkit-box-shadow: $btn-shadow;
  box-shadow: $btn-shadow;
}

.phone-icon-small {
  padding: 10px 10px;
  background-size: 100% 100%;
  margin-right: 0.5rem;
  background-image: url('../../images/icons/phone-sticky.svg');
}

// testimonials css
.tns-nav {
  text-align: center;
  margin: 2.5px 0;
}

.tns-nav > [aria-controls] {
  cursor: pointer;
  height: 10px;
  width: 10px;
  margin: 0 2px;
  background-color: fade-out(darken($background-color1, 50%), 0.5);
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
  border: none;
  padding: 0;
}

.tns-nav > .tns-nav-active { background: $accentcolor; }

.testimonials-wrap {
  margin: 0 auto;
  max-width: 500px;
}

.testimonial {
  margin: 10px;
  padding: 1em 0.5em;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  position: relative;
  color: $testimonialfontcolor;
  font-family: $testimonialcardfontfamily;
  font-weight: bold;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.testimonial::before {
  position: absolute;
  top: 0;
  left: 0;
  content: "";
  background-image: url('../../images/card-cmp.jpg');
  opacity: 0.7;
  background-size: 100% 100%;
  width: 100%;
  height: 100%;
  z-index: -10;
}

.test-serv-wrap {

  @media screen and (min-width: $screen-lg-min) {
    display: flex;
  }
}

#testimonial-section {
  background: darken($background-color1, 10%);

  @media screen and (min-width: $screen-lg-min) {
    background: darken($background-color1, 20%);
    width: 50%;
  }
}

#testimonial-heading {
  @media screen and (min-width: $screen-lg-min) {
    margin: 0 1em 1em 0;
    padding-right: 1em;
    text-align: right;
    background: darken($background-color1, 10%);
    // max-width: 850px;
  }
}


#testimonials-section {
  text-align: center;
  width: 400px;
  margin: 0 auto;
}

.testimonial-text {
  text-align: left;
  margin: 10px 0;
  width: 80%;
}

.testimonial-author {
  text-align: right;
  margin: 10px 0;
  width: 80%;
}

.page-main-section {
  min-height: 570px;
  padding: 2em 0;
}

// services css
#practice-section {
  background: darken($background-color1, 20%);

  @media screen and (min-width: $screen-lg-min) {
    width: 50%;
  }
}

#practice-area-heading {
  @media screen and (min-width: $screen-lg-min) {
    // max-width: 850px;
    padding-left: 1em;
    margin: 0 0 1em 1em;
    text-align: left;
    background: darken($background-color1, 10%);
  }
}

.main-h2 {
  max-height: 2.5em;
  // max-width: 700px;
  width: auto;
  position: relative;
  margin: 0 auto;
  margin-bottom: 0.5em;

  &:after {
    position: absolute;
    bottom: 0;
    left: 0;
    content: "";
    width: 100%;
    height: 2px;
    background-color: $accentcolor;
    transform: scaleX(0.70);
  }

  @media screen and (min-width: $screen-lg-min) {
    &:after {
      display: none;
    }
  }
}
// about css
#about-section {
  background: $sectionbgcolor3;
  text-align: center;

  .section-content {
    margin-bottom: 2em;
  }

  img {
    // TODO: adjust dimension correctly
    max-height: 400px; 
    max-width: 300px;
    margin: 0 auto;
    display: block;
  }

  @media screen and (min-width: $screen-lg-min) {
    display: flex;
    flex-direction: row;
    align-items: center;

    #about-section-heading {
      background: $sectionbgcolor1;
      width: 100%;
    }
  }
}

.practice-container {
  display: flex;
  flex-direction: column;
  @media screen and (min-width: $screen-md-min) {
    flex-direction: row;
    justify-content: space-around;
  }
}

.image-box {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 56.25%;
  margin: 0 auto;
  
  @media screen and (min-width: $screen-md-min) {
    width: 280px;
    height: 280px;
    padding-bottom: 0;
  }
}

.image-box-text {
  font-size: 1.5em;
  font-family: 'Oswald', 'Times New Roman';
  text-transform: uppercase;
  font-weight: 650;
  color: $background-color1;
  background: rgba(0,0,0,0.5);
  padding: 0.55em 1em;
}

.criminal {
  background: url('../../images/other/criminal-law-image.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.family {
  background: url('../../images/other/family-law-image.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

